Fixed About Me Horizontal Scrolling Issue

--- a/website_stylesheet.css
+++ b/website_stylesheet.css
@@ -168,6 +168,7 @@ td {
   position: relative;
   top: 8vh;
   left: 5vw;
+  width: 90vw;
 }
 
 #profile_picture {
